[package]
name = "cb_browser_ui"
version = "0.3.0"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
license = "AGPL-3.0"
edition = "2018"
build = "./build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
stdweb = { path = "../patches/stdweb" }
serde = "1.0"
serde_derive = "1.0"
serde-wasm-bindgen = "0.6"
compact_macros = "0.1.0"
wasm-bindgen = "=0.2.100"
compact = { version = "0.2.16", features = ["serde-serialization"] }
descartes = {version = "0.1.20", features = ["compact_containers", "serde-serialization"]}
michelangelo = {version = "0.2.5"}
kay = { path = "../patches/kay", default-features = false, features = ["browser"] }
cb_util = {path = "../cb_util"}
cb_time = {path = "../cb_time"}
cb_planning = {path = "../cb_planning"}

[dependencies.cb_simulation]
path = "../cb_simulation"
default-features = false

[build-dependencies]
kay_codegen = {version = "0.3.10", features = ["serde-serialization"]}

[replace]
"chunky:0.3.7" = { path = "../patches/chunky" }
"kay:0.5.1" = { path = "../patches/kay" }
"rand:0.5.6" = { path = "../patches/rand-0.5.6" }
"stdweb:0.4.20" = { path = "../patches/stdweb" }

[profile.release]
debug = true
